Add to other notebooks and generate

--- a/01_evaluation_pipeline.ipynb
+++ b/01_evaluation_pipeline.ipynb
@@ -1045,6 +1045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Parallel plots with all evaluation trajectories\n",
     "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
     "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
     "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
@@ -1106,138 +1107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
-    "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
-    "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
-    "\n",
-    "dataset_names = [\"flores\"]\n",
-    "reduce_sizes = [200]\n",
-    "\n",
-    "directions = [\"en-de\", \"de-en\",\n",
-    "              \"en-cs\", \"cs-en\",\n",
-    "              \"en-is\", \"is-en\",\n",
-    "              \"en-zh\", \"zh-en\",\n",
-    "              \"en-ru\", \"ru-en\"]\n",
-    "\n",
-    "model_names = [\"alma\", \"nllb\", \"llama3\", \"falcon3-mamba\", \"falcon3\", \"qwen2.5\",\n",
-    "               \"mistral\", \"bloomz\"]\n",
-    "model_sizes = [None, None, \"8B\", None, \"7B\", \"7B\",\n",
-    "               None, \"7B\", None,]\n",
-    "\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"direction\"],\n",
-    "                    colors=None,\n",
-    "                    savepath=\"./results/evaluations_figures/main_direction_flores\")\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"model\"],\n",
-    "                    colors=None,\n",
-    "                    savepath=\"./results/evaluations_figures/main_model_flores\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
-    "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
-    "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
-    "\n",
-    "dataset_names = [\"flores\"]\n",
-    "reduce_sizes = [200]\n",
-    "\n",
-    "directions = [\"en-de\", \"de-en\",\n",
-    "              \"en-cs\", \"cs-en\",\n",
-    "              \"en-is\", \"is-en\",\n",
-    "              \"en-zh\", \"zh-en\",\n",
-    "              \"en-ru\", \"ru-en\"]\n",
-    "\n",
-    "model_names = [\"alma\",\n",
-    "               \"llama3\",\n",
-    "               \"falcon3\",\n",
-    "               \"qwen2.5\",\n",
-    "               \"opt-instruct\",]\n",
-    "model_sizes = [None,\n",
-    "               \"3B\",\n",
-    "               \"3B\",\n",
-    "               \"3B\",\n",
-    "               None,]\n",
-    "\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"direction\"],\n",
-    "                    colors=None,\n",
-    "                    savepath = \"./results/evaluations_figures/medium_and_alma_direction_flores\")\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"model\"],\n",
-    "                    colors=None,\n",
-    "                    savepath = \"./results/evaluations_figures/medium_and_alma_model_flores\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
-    "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
-    "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
-    "\n",
-    "dataset_names = [\"flores\"]\n",
-    "reduce_sizes = [200]\n",
-    "\n",
-    "directions = [\"en-de\", \"de-en\",\n",
-    "              \"en-cs\", \"cs-en\",\n",
-    "              \"en-is\", \"is-en\",\n",
-    "              \"en-zh\", \"zh-en\",\n",
-    "              \"en-ru\", \"ru-en\"]\n",
-    "\n",
-    "model_names = [\"alma\",\n",
-    "               \"llama3\",\n",
-    "               \"falcon3\",\n",
-    "               \"qwen2.5\", \"qwen2.5\"]\n",
-    "\n",
-    "model_sizes = [None,\n",
-    "               \"1B\",\n",
-    "               \"1B\",\n",
-    "               \"0.5B\", \"1.5B\"]\n",
-    "\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"direction\"],\n",
-    "                    colors=None,\n",
-    "                    savepath = \"./results/evaluations_figures/small_and_alma_direction_flores\")\n",
-    "\n",
-    "make_parallel_plot(directions,\n",
-    "                    model_names, model_sizes,\n",
-    "                    dataset_names, reduce_sizes,\n",
-    "                    metric_names,\n",
-    "                    list_colors_per = [\"model\"],\n",
-    "                    colors=None,\n",
-    "                    savepath = \"./results/evaluations_figures/small_and_alma_model_flores\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Parallel plot with chinese trajectories\n",
     "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
     "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
     "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
@@ -1277,6 +1147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Parallel plot NLLB v.s. ALMA\n",
     "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
     "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
     "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
@@ -1327,6 +1198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Bar plot per metric\n",
     "directions = [\"en-de\", \"de-en\",\n",
     "              \"en-cs\", \"cs-en\",\n",
     "              \"en-is\", \"is-en\",\n",
@@ -1372,6 +1244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Bar plot per direction\n",
     "directions = [\"en-de\", \"de-en\",\n",
     "              \"en-cs\", \"cs-en\",\n",
     "              \"en-is\", \"is-en\",\n",
