--- a/04_RAG_for_ICL.ipynb
+++ b/04_RAG_for_ICL.ipynb
@@ -22,6 +22,7 @@
     "    eval_metrics,\n",
     "    make_parallel_plot,\n",
     "    make_bar_plot,\n",
+    "    make_bar_plot_all_metrics\n",
     ")\n",
     "\n",
     "from utils.eval_params import num_beams, temperature, max_new_tokens, top_p\n",
@@ -399,6 +400,40 @@
     "                width=0.2,\n",
     "                cmap=\"rainbow\",\n",
     "                savepath = \"./results/evaluations_figures/barplot_all_models_RAG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Bar plot per direction\n",
+    "metric_names = [\"ROUGE-1\", \"ROUGE-2\", \"ROUGE-L\", \"ROUGE-Lsum\",\n",
+    "                \"BLEU\", \"SacreBLEU\", \"chrF\", \"chrF++\",\n",
+    "                \"COMET\", \"BLEURT\", \"BERTscore\", \"METEOR\"]\n",
+    "\n",
+    "dataset_name = \"wnt23\"\n",
+    "reduce_size = 50\n",
+    "\n",
+    "directions = [\"en-de\", \"de-en\",\n",
+    "              \"en-cs\", \"cs-en\",\n",
+    "              \"en-is\", \"is-en\",\n",
+    "              \"en-zh\", \"zh-en\",\n",
+    "              \"en-ru\", \"ru-en\"]\n",
+    "\n",
+    "model_names = [\"llama3\",\n",
+    "               \"llama3\",\n",
+    "               \"llama3\",]\n",
+    "model_sizes = [\"3B\",\n",
+    "               \"3B\",\n",
+    "               \"3B\",]\n",
+    "additionnal_names = [None,\n",
+    "                     \"RAG_1examples\",\n",
+    "                     \"RAG_2examples\"]\n",
+    "\n",
+    "make_bar_plot_all_metrics(directions, model_names, model_sizes, dataset_name, reduce_size, metric_names, additionnal_names,\n",
+    "                        savepath = \"./results/evaluations_figures/RAG_barplot/barplot_all_metrics_ICL\")"
    ]
   },
   {
